# dungeon_crawl_p2p

./: .gitignore  Cargo.toml  README.md  bacon.toml
.cargo/: config.toml
assets/: dungeon.ron
src/: common.rs  components.rs  config.rs  dungeon.rs  events.rs  game_states.rs  hud.rs  items.rs  main.rs  monsters.rs  player.rs  resources.rs  startup.rs  systems.rs
src/common/: add_core_systems.rs  debug_ggrs.rs  dungeon_data.rs  events.rs  health.rs  plugin.rs
src/common/fov/: components.rs  events.rs  fov_queries.rs  line_of_sight.rs  plugin.rs  recalculate_fov.rs
src/common/health/: components.rs  drink_potion.rs  events.rs  (+2 more)
src/components/: checksum_transform.rs  healing.rs  health.rs  move_throttle.rs
src/dungeon/: README.md  components.rs  config.rs  despawn_dungeon.rs  dungeon_components.rs  dungeon_events.rs  events.rs  illuminator.rs  plugin.rs  reveal_cheat.rs  reveal_map.rs  spawn_dungeon.rs  zoom.rs
src/game_states/: game_over.rs  plugin.rs
src/hud/: README.md  assets.rs  camera_setup.rs  components.rs  config.rs  health_bar.rs  health_bar_setup.rs  inventory.rs  plugin.rs  spawn_health_bar.rs  tooltips.rs  wield_weapon.rs
src/items/: components.rs  despawn_items.rs  plugin.rs  spawn_items.rs
src/monsters/: components.rs  events.rs  monster_actions.rs  plugin.rs  spawn_monsters.rs
src/player/: README.md  camera.rs  components.rs  despawn_players.rs  events.rs  local_player.rs  player_actions.rs  plugin.rs  spawn_players.rs  teleport.rs  transport.rs
src/resources/: README.md  config.rs  dungeon_map.rs  local_inputs.rs  monster_move_tracker.rs  player_inputs.rs  random_generator.rs
src/startup/: README.md  assets.rs  config.rs  events.rs  plugin.rs  startup.rs
src/systems/: camera.rs  camera_follow.rs  create_p2p_session.rs  fov.rs  generate_map.rs  handle_ggrs_events.rs  healing.rs  hud.rs  monster_actions.rs  monster_movement.rs  move_players.rs  movement.rs  persist_monster_moves.rs  persist_snapshot.rs  player.rs  player_actions.rs  player_movement.rs  read_local_inputs.rs  recalculate_fov.rs  spawn_camera.rs  spawn_dungeon.rs  spawn_dungeon_tiles.rs  spawn_monsters.rs  spawn_players.rs  start_matchbox_socket.rs  start_sync_test_session.rs  startup.rs  wait_for_players.rs
static/: README.md  dungeon_crawl_p2p.d.ts  dungeon_crawl_p2p.js  index.html
(+147 files in other folders)
