[package]
name = "dungeon_crawl_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["bevy_window"] }
# bevy_ggrs = { version = "0.17", features = ["wasm-bindgen"] }
bevy_ggrs = { path = "../bevy_ggrs", features = ["wasm-bindgen"] }
# bevy_ggrs = { git = "https://github.com/haihala/bevy_ggrs.git", branch = "main", features = [
#   "wasm-bindgen",
# ] }
# bevy_matchbox = { version = "0.10", features = ["ggrs"] }
# bevy_matchbox = { git = "https://github.com/haihala/matchbox.git", branch = "main", features = [
#   "ggrs",
# ] }
bevy_matchbox = { path = "../matchbox/bevy_matchbox", features = ["ggrs"] }
rand = "0.8"
rand_xoshiro = "0.6.0"
# locked to 0.2.97 to be compatible w/ wasm-server-runner
wasm-bindgen = "=0.2.97"

[profile.dev.package."*"]
opt-level = 2
